--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Backend for Lexpulse",
   "main": "app.js",
+  "type": "commonjs",
   "scripts": {
     "start": "NODE_ENV=production node app",
     "dev": "cross-env NODE_ENV=development nodemon app"
@@ -10,10 +11,14 @@
   "author": "Kwame Sarpong",
   "license": "MIT",
   "dependencies": {
+    "@apollo/server": "^4.11.0",
+    "@graphql-tools/merge": "^9.0.7",
     "@sendgrid/mail": "^7.7.0",
     "africastalking": "^0.5.3",
-    "axios": "^0.21.1",
+    "apollo-server": "^3.13.0",
+    "axios": "1.7.4",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.20.3",
     "cloudinary": "^1.23.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
@@ -21,6 +26,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "graphql": "^16.9.0",
     "js-base64": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
